# optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-8-44

./: CMakeLists.txt  Menu.c  main.c  répartitionTravail.md
fileTexte/: operations.txt  sauvegarde.txt
include/: fonction.h  header.h
partieTheo/: Sources
partieThéo/: lectureFichier.c
src/: Menu.c  fonction.c  fonction.h  graphe.c  lectureFichier.c  main.c  pileFonction.c  precedenceTemps.c  precedencesEtTemps.c  reunionDesCode.c  test.c  test2.c
