cmake_minimum_required(VERSION 3.23)
project(optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-8-44 C)

set(CMAKE_C_STANDARD 17)

add_executable(optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-8-44 main.c)

target_link_libraries(optimisation-d-une-ligne-d-assemblage-ing2-tg-2023-2024-8-44 -lalleg44 -lmingw32)